<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ETCh</string>
    <string name="app_name_register">ETCh   Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_messages">No messages</string>
    <string name="send">Send</string>
    <string name="new_etch_messages">New ETCh Messages</string>
	<string name="action_discard">Delete All Messages</string>
	<string name="action_logout">Logout</string>
	<string name="action_friends">List of Friends</string>
	<string name="action_add">Add a New Friend</string>
	<string name="action_unfriend_all">Delete All Friends</string>
	<string name="button_login">Login</string>
	<string name="button_Register">Register</string>
	<string name="button_add">Add</string>
	<string name="field_username">Username</string>
	<string name="field_password">Password</string>
	<string name="field_confirm">Confirm Password</string>
	<string name="button_register_send">Register</string>
    <string name="button_return">Return</string>
</resources>
