<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
     android:background="@android:color/black"
     android:textColor="@android:color/white">

    <Button
        android:id="@+id/button_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_register_send"
        android:layout_alignBottom="@+id/button_register_send"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:text="@string/button_return" 
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/button_register_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="74dp"
        android:layout_marginLeft="57dp"
        android:text="@string/button_register_send" 
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/editor_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editor_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/field_password" 
        android:textColor="@android:color/white"
        android:textCursorDrawable="@null"/>
    <EditText
        android:id="@+id/editor_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editor_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/field_confirm" 
        android:textColor="@android:color/white"
        android:textCursorDrawable="@null"/>

    <EditText
        android:id="@+id/editor_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:ems="10"
        android:hint="@string/field_username"
        android:textColor="@android:color/white" 
        android:textCursorDrawable="@null"/>

</RelativeLayout>
