<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
     android:background="@android:color/black"
     android:textColor="@android:color/white">

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_login"
        android:layout_alignBottom="@+id/button_login"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:text="@string/button_Register" 
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="74dp"
        android:layout_marginLeft="57dp"
        android:text="@string/button_login" 
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/editor_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:hint="@string/field_username" 
        android:textColor="@android:color/white"
        android:textCursorDrawable="@null">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editor_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editor_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/field_password" 
        android:textColor="@android:color/white"
        android:textCursorDrawable="@null"/>

</RelativeLayout>
